<?xml version="1.0" encoding="utf-8"?>
<resources>
    // App stings
    <string name="app_name">Recipe Box</string>
    <string name="action_settings">Settings</string>
    <string name="action_option1">Option 1</string>
    <string name="action_option2">Option 2</string>
    <string name="action_option3">Option 3</string>

    // Layout
    <string name="header">Recipe Search</string>
    <string name="search_hint">Enter search term</string>
    <string name="course">Course</string>
    <string name="search_btn">Search</string>
    <string name="clear_btn">Clear</string>


    // Spinner Array
    <string-array name="courses_array">
        <item>Appetizers</item>
        <item>Beverages</item>
        <item>Breads</item>
        <item>Breakfast and Brunch</item>
        <item>Cocktails</item>
        <item>Condiments and Sauces</item>
        <item>Deserts</item>
        <item>Lunch and Snacks</item>
        <item>Main Dishes</item>
        <item>Salads</item>
        <item>Side Dishes</item>
        <item>Soups</item>
    </string-array>

</resources>
