<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.GarciaEric.userinteraction.app.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_option1"
        android:title="@string/action_option1"
        android:orderInCategory="101"/>
    <item android:id="@+id/action_option2"
        android:title="@string/action_option2"
        android:orderInCategory="102"/>
    <item android:id="@+id/action_option3"
        android:title="@string/action_option3"
        android:orderInCategory="103"/>
</menu>
